# TCC

./: .gitignore  README.md  clean  main.bbl-SAVE-ERROR  main.bcf-SAVE-ERROR  main.tex  makefile
aftertext/: anexo_a.tex  apendice_a.tex  references.bib
beforetext/: beforetext.tex
chapters/: 1-chapter.tex  2-chapter.tex  3-chapter.tex
docs/: .gitignore  acronyms.tex  clean.sh  main.tex  makefile
docs/aftertext/: references.bib
docs/beforetext/: approvation.tex  beforetext.tex  thanks.tex
docs/chapters/: 1-introduction.tex  2-chapter.tex  2-theory.tex  3-chapter.tex  3-related_works.tex  4-development.tex  5-conclusion.tex
docs/setup/: ufscthesisA4-alf.sty
experiments/: poetry.toml  pyproject.toml
experiments/analysis/: analyze_model.py  llava_analysis.txt  llava_analysis_10k.txt  llava_test_2024-09-10 03:54:18.txt  llava_test_2024-09-11 02:32:40.txt  test.py
experiments/experiments/: dataset.py
experiments/notebooks/: analyze_tests.ipynb  analyze_trainings.ipynb  build_dataset.ipynb  count_tokens.ipynb  define_base_model.ipynb  fine_tune.ipynb  llava-derm.ipynb  lora_fine_tune.ipynb  merge_weights.ipynb  qlora_fine_tune.ipynb  run.ipynb  test.ipynb
experiments/notebooks/scripts/: analysis.py  authentication.py  configuration.py  data.py  definitions.py  messages.py  multi_gpu_training.py  test.py  training.py
experiments/results/: models.json
experiments/scripts/: analyze_tests.py  test.py
experiments/scripts/data/: dataset.py  prepare_test_data.py
experiments/training/: models.json
setup/: ufscthesisA4-alf.sty
