[tool.poetry]
name = "experiments"
version = "0.1.0"
description = ""
authors = ["Eric Fernandes Evaristo <ericfernandes7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
kaggle = "^1.6.14"
pandas = "^2.2.2"
transformers = "^4.42.4"
accelerate = "^0.32.1"
evaluate = "^0.4.2"
peft = "^0.11.1"
ipykernel = "^6.29.5"
pydicom = "^2.4.4"
pillow = "^10.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
