[tool.poetry]
name = "experiments"
version = "0.1.0"
description = ""
authors = ["Eric Fernandes Evaristo <ericfernandes7@gmail.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.10"
unsloth = "^2024.12.2"
huggingface-hub = "^0.26.3"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
tensorboard = "^2.18.0"
pydantic = "^2.11.1"
ipywidgets = "^8.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
